--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "build": "vite build",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
@@ -10,9 +11,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^0.25",
+        "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "sass": "^1.56.1",
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "laravel-vite": "^0.0.24",
+        "laravel-vite-plugin": "^0.7.8",
+        "vite": "^4.3.9"
     }
 }
